tests/paczka1/small_fuzzy/79393149.err
Error in line 1: S19 S19 94,77
Error in line 3: S19 S19 186,66
Error in line 4: ZYrj432r9Y S377 8,4
